--- a/index.html
+++ b/index.html
@@ -6,5 +6,8 @@
 </head>
 
 <body>
+	<div class="container">
+		<a href="JS30/Day1- JavaScript Drum Kit/index.html">Day1- JavaScript Drum Kit</a>
+	</div>
 </body>
 </html>
