--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>Untitled Document</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>30 Days JavaScript Challenge</title>
 </head>
 
 <body>
