--- a/JS30/Day1- JavaScript Drum Kit/index.html
+++ b/JS30/Day1- JavaScript Drum Kit/index.html
@@ -7,42 +7,42 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div class="keys">
+	<div class="keys">
     <div data-key="65" class="key">
-      <kbd>A</kbd>
-      <span class="sound">clap</span>
-    </div>
-    <div data-key="83" class="key">
-      <kbd>S</kbd>
-      <span class="sound">hihat</span>
+      <a onClick="play()"><kbd>A</kbd>
+      <span class="sound">clap</span></a>
+	  </div>
+	<div data-key="83" class="key">
+      <a onClick="play()"><kbd>S</kbd>
+      <span class="sound">hihat</span></a>
     </div>
     <div data-key="68" class="key">
-      <kbd>D</kbd>
-      <span class="sound">kick</span>
+      <a onClick="play()"><kbd>D</kbd>
+      <span class="sound">kick</span></a>
     </div>
     <div data-key="70" class="key">
-      <kbd>F</kbd>
-      <span class="sound">openhat</span>
+      <a onClick="play()"><kbd>F</kbd>
+      <span class="sound">openhat</span></a>
     </div>
     <div data-key="71" class="key">
-      <kbd>G</kbd>
-      <span class="sound">boom</span>
+      <a onClick="play()"><kbd>G</kbd>
+      <span class="sound">boom</span></a>
     </div>
     <div data-key="72" class="key">
-      <kbd>H</kbd>
-      <span class="sound">ride</span>
+      <a onClick="play()"><kbd>H</kbd>
+      <span class="sound">ride</span></a>
     </div>
     <div data-key="74" class="key">
-      <kbd>J</kbd>
-      <span class="sound">snare</span>
+      <a onClick="play()"><kbd>J</kbd>
+      <span class="sound">snare</span></a>
     </div>
     <div data-key="75" class="key">
-      <kbd>K</kbd>
-      <span class="sound">tom</span>
+      <a onClick="play()"><kbd>K</kbd>
+      <span class="sound">tom</span></a>
     </div>
     <div data-key="76" class="key">
-      <kbd>L</kbd>
-      <span class="sound">tink</span>
+      <a onClick="play()"><kbd>L</kbd>
+		  <span class="sound">tink</span></a>
     </div>
   </div>
 
@@ -57,6 +57,10 @@
   <audio data-key="76" src="sounds/tink.wav"></audio>
 
 	<script>
+		function play(){
+			var myaudio = new Audio('sounds/hihat.wav');
+			myaudio.play();
+		}
 		function playsound(e){
 			const audio = document.querySelector(`audio[data-key="${e.keyCode}"]`);
 			const key = document.querySelector(`.key[data-key="${e.keyCode}"]`);
