--- a/index.html
+++ b/index.html
@@ -3,12 +3,13 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<link rel="stylesheet" href="style.css">
 <title>30 Days JavaScript Challenge</title>
 </head>
-
 <body>
 	<div class="container">
 		<a href="JS30/Day1- JavaScript Drum Kit/index.html">Day1- JavaScript Drum Kit</a>
+		<a href="JS30/Day2- JS and CSS Clock/index.html">Day2- JS and CSS Clock</a>
 	</div>
 </body>
 </html>
