--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 	<div class="container">
 		<a href="JS30/Day1- JavaScript Drum Kit/index.html">Day1- JavaScript Drum Kit</a>
 		<a href="JS30/Day2- JS and CSS Clock/index.html">Day2- JS and CSS Clock</a>
+		<a href="JS30/Day3- CSS Variables and JS">Day3- CSS Variables and JS</a>
 	</div>
 </body>
 </html>
