--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 		<a href="JS30/Day2- JS and CSS Clock/index.html">Day2- JS and CSS Clock</a>
 		<a href="JS30/Day3- CSS Variables and JS/index.html">Day3- CSS Variables and JS</a>
 		<a href="JS30/Day4- Array Cardio Day 1/index.html">Day4- Array Cardio Day 1</a>
+		<a href="JS30/Day5- Flex Panel Gallery/index.html">Day5- Flex Panel Gallery</a>
 	</div>
 </body>
 </html>
