--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
 		<a href="JS30/Day3- CSS Variables and JS/index.html">Day3- CSS Variables and JS</a>
 		<a href="JS30/Day4- Array Cardio Day 1/index.html">Day4- Array Cardio Day 1</a>
 		<a href="JS30/Day5- Flex Panel Gallery/index.html">Day5- Flex Panel Gallery</a>
+		<a href="JS30/Day6- Type Ahead/index.html">Day6- Type Ahead</a>
+		<a href="JS30/Day7- Array Cardio Day 2/index.html">Day7- Array Cardio Day 2</a>
+		<a href="JS30/Day8- Fun with HTML5 Canvas/index.html">Day8- Fun with HTML5 Canvas</a>
 	</div>
 </body>
 </html>
