--- a/index.html
+++ b/index.html
@@ -16,6 +16,12 @@
 		<a href="JS30/Day6- Type Ahead/index.html">Day6- Type Ahead</a>
 		<a href="JS30/Day7- Array Cardio Day 2/index.html">Day7- Array Cardio Day 2</a>
 		<a href="JS30/Day8- Fun with HTML5 Canvas/index.html">Day8- Fun with HTML5 Canvas</a>
+		<a href="JS30/Day9- Dev Tools Domination/index.html">Day9- Dev Tools Domination</a>
+		<a href="JS30/Day10- Hold Shift and Check Checkboxes/index.html">Day10- Hold Shift and Check Checkboxes</a>
+		<a href="JS30/Day11- Custom Video Player/index.html">Day11- Custom Video Player</a>
+		<a href="JS30/Day12- Key Sequence Detection/index.html">Day12- Key Sequence Detection</a>
+		<a href="JS30/Day13- Slide in on Scroll/index.html">Day13- Slide in on Scroll</a>
+		<a href="JS30/Day14- JavaScript References VS Copying/index.html">Day14- JavaScript References VS Copying</a>
 	</div>
 </body>
 </html>
