--- a/index.html
+++ b/index.html
@@ -22,6 +22,11 @@
 		<a href="JS30/Day12- Key Sequence Detection/index.html">Day12- Key Sequence Detection</a>
 		<a href="JS30/Day13- Slide in on Scroll/index.html">Day13- Slide in on Scroll</a>
 		<a href="JS30/Day14- JavaScript References VS Copying/index.html">Day14- JavaScript References VS Copying</a>
+		<a href="JS30/Day15- LocalStorage and Event Delegation/index.html">Day15- LocalStorage and Event Delegation</a>
+		<a href="JS30/Day16- CSS Text Shadow Mouse Move Effect/index.html">Day16- CSS Text Shadow Mouse Move Effect</a>
+		<a href="JS30/Day17- Sorting Band Names without articles/index.html">Day17- Sorting Band Names without articles</a>
+		<a href="JS30/Day18- Tally String Times with Reduce/index.html">Day18- Tally String Times with Reduce</a>
+		<a href="JS30/Day19- Webcam Fun/index.html">Day19- Webcam Fun</a>
 	</div>
 </body>
 </html>
