--- a/index.html
+++ b/index.html
@@ -27,6 +27,17 @@
 		<a href="JS30/Day17- Sorting Band Names without articles/index.html">Day17- Sorting Band Names without articles</a>
 		<a href="JS30/Day18- Tally String Times with Reduce/index.html">Day18- Tally String Times with Reduce</a>
 		<a href="JS30/Day19- Webcam Fun/index.html">Day19- Webcam Fun</a>
+		<a href="JS30/Day20- Speech Detection/index.html">Day20- Speech Detection</a>
+		<a href="JS30/Day21- Geolocation based Speedometer and Compass/index.html">Day21- Geolocation based Speedometer and Compass</a>
+		<a href="JS30/Day22- Follow Along Links/index.html">Day22- Follow Along Links</a>
+		<a href="JS30/Day23- Speech Synthesis/index.html">Day23- Speech Synthesis</a>
+		<a href="JS30/Day24- Sticky Nav/index.html">Day24- Sticky Nav</a>
+		<a href="JS30/Day25- Event Capture, Propagation, Bubbling and Once/index.html">Day25- Event Capture, Propagation, Bubbling and Once</a>
+		<a href="JS30/Day26- Stripe Follow Along Nav/index.html">Day26- Stripe Follow Along Nav</a>
+		<a href="JS30/Day27- Click and Drag/index.html">Day27- Click and Drag</a>
+		<a href="JS30/Day28- Video Speed Controller/index.html">Day28- Video Speed Controller</a>
+		<a href="JS30/Day29- Countdown Timer/index.html">Day29- Countdown Timer</a>
+		<a href="JS30/Day30- Whack A Mole/index.html">Day30- Whack A Mole</a>
 	</div>
 </body>
 </html>
